--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,5 @@ theme: jacman-master
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/cpingwang/cpingwang.github.io.git
