--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ search:
   
 # Site
 title: Ping's Blog
-subtitle: Continuous Levelup
+subtitle: Continuous LevelUp
 description:
 author: Ping
 language: en
